--- a/Training-API/Training-API/Training-API.csproj
+++ b/Training-API/Training-API/Training-API.csproj
@@ -85,7 +85,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="App_Start\TrainingApiConfig.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
