--- a/Training-API/Training-API.Tests/Training-API.Tests.csproj
+++ b/Training-API/Training-API.Tests/Training-API.Tests.csproj
@@ -56,8 +56,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="IntegrationTest\Controller\IntgTestTrainingController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest\Controller\UnitTestTrainingController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -67,6 +68,10 @@
       <Project>{59CBC879-E929-4372-A997-81AE5742443B}</Project>
       <Name>Training-API</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UnitTest\Common\" />
+    <Folder Include="UnitTest\DbSets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
