--- a/Training-API/Training-API/Training-API.csproj
+++ b/Training-API/Training-API/Training-API.csproj
@@ -86,11 +86,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\TrainingApiConfig.cs" />
+    <Compile Include="Controllers\TrainingController.cs" />
+    <Compile Include="DB\ITrainingDBContext.cs" />
+    <Compile Include="DB\TrainingDBContext.cs" />
+    <Compile Include="Filters\NotImplExceptionFilterAttribute.cs" />
+    <Compile Include="Filters\ValidateModelAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Training.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\TrainingRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -103,7 +109,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
