--- a/Training-API/Training-API/Training-API.csproj
+++ b/Training-API/Training-API/Training-API.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Models\Training.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\TrainingRepository.cs" />
+    <Compile Include="Utils\ErrorMessageConstants.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
