--- a/Training-API/Training-API.Tests/Training-API.Tests.csproj
+++ b/Training-API/Training-API.Tests/Training-API.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="UnitTest\Common\TestDbSet.cs" />
     <Compile Include="UnitTest\Common\TestTrainingDBContext.cs" />
     <Compile Include="UnitTest\Controller\UnitTestTrainingController.cs" />
+    <Compile Include="UnitTest\DbSets\TestTrainingDbSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -88,9 +89,7 @@
       <Name>Training-API</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UnitTest\DbSets\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
