--- a/Training-API/Training-API/Web.config
+++ b/Training-API/Training-API/Web.config
@@ -13,6 +13,9 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+  <connectionStrings>
+    <add name="TrainingDBContext" connectionString="server=.; database=TrainingDB; integrated security=true;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
