--- a/Training-Web/package.json
+++ b/Training-Web/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-moment": "^3.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
