--- a/Training-Web/angular.json
+++ b/Training-Web/angular.json
@@ -75,6 +75,7 @@
           }
         },
         "test": {
+          "codeCoverage": true,
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
